# sandbox

./: CMakeLists.txt  CMakePresets.json  README.md  main.cpp
interfaceTarget/: CMakeLists.txt  interfaceTarget.cpp  interfaceTarget.hpp
privateTarget/: CMakeLists.txt  privateTarget.cpp  privateTarget.hpp
publicTarget/: CMakeLists.txt  publicTarget.cpp  publicTarget.hpp
publicTarget2/: CMakeLists.txt  publicTarget2.cpp  publicTarget2.hpp
